[gd_scene load_steps=8 format=2]

[ext_resource path="res://Dialogs/Dialog1/DialogManager.tscn" type="PackedScene" id=1]
[ext_resource path="res://Dialogs/Dialog1/NarratorDialogBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Dialogs/Dialog1/DialogTests.gd" type="Script" id=3]
[ext_resource path="res://Dialogs/Dialog1/chara2.jpg" type="Texture" id=4]
[ext_resource path="res://Dialogs/Dialog1/Chara 1.jpg" type="Texture" id=5]
[ext_resource path="res://Dialogs/Dialog1/chara1DialogBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Dialogs/Dialog1/chara2DialogBox.tscn" type="PackedScene" id=7]

[node name="DialogTests" type="Node2D"]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="AbstractChar2" type="Node2D" parent="."]
position = Vector2( 260.703, 86.9188 )

[node name="Sprite" type="Sprite" parent="AbstractChar2"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="chara2DialogBox" parent="AbstractChar2" instance=ExtResource( 7 )]
margin_left = -98.2636
margin_top = -231.634
margin_right = 101.736
margin_bottom = -81.6337

[node name="AbstractChar1" type="Node2D" parent="."]
position = Vector2( -294.001, -71.5656 )

[node name="Sprite" type="Sprite" parent="AbstractChar1"]
scale = Vector2( -0.5, 0.5 )
texture = ExtResource( 5 )

[node name="chara1DialogBox" parent="AbstractChar1" instance=ExtResource( 6 )]
margin_left = -105.511
margin_top = -208.778
margin_right = 94.4886
margin_bottom = -58.778

[node name="NarratorDialogBox" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 301.041
margin_bottom = 301.041

[node name="DialogManagerNarrator" parent="." instance=ExtResource( 1 )]

[node name="DialogManagerCharacters" parent="." instance=ExtResource( 1 )]

[node name="StartDialogsButton" type="Button" parent="."]
margin_left = -118.806
margin_top = 1.67776
margin_right = 122.194
margin_bottom = 21.6778
text = "DialogTests_StartDialogsButton-text"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCharactersButton" type="Button" parent="."]
margin_left = -130.508
margin_top = 40.2596
margin_right = 130.492
margin_bottom = 60.2596
text = "DialogTests_StartCharactersButton-text"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="custom_signal" from="DialogManagerNarrator" to="." method="_on_DialogManagerNarrator_custom_signal"]
[connection signal="dialogs_done" from="DialogManagerNarrator" to="." method="_on_DialogManager_dialogs_done"]
[connection signal="dialogs_done" from="DialogManagerCharacters" to="." method="_on_DialogManagerCharacters_dialogs_done"]
[connection signal="pressed" from="StartDialogsButton" to="." method="_on_StartDialogsButton_pressed"]
[connection signal="pressed" from="StartCharactersButton" to="." method="_on_StartCharactersButton_pressed"]
